--- a/Practice-Style/QRcode.css
+++ b/Practice-Style/QRcode.css
@@ -8,7 +8,7 @@
     padding: 10px 0px;
     border-radius: 12px;
 
-    position: absolute;
+    position: fixed;
     top: 50%;
     right: 50%;
     transform: translate(0, -50%);
