--- a/Practice-Style/QRcode.css
+++ b/Practice-Style/QRcode.css
@@ -11,7 +11,7 @@
     position: fixed;
     top: 50%;
     right: 50%;
-    transform: translate(0, -50%);
+    transform: translate(-50%, -50%);
 
     box-shadow: 0px 10px 15px rgba(0,0,0,0.15);
     
